Add model before and after operations to the operations